--- a/snippet/fpc_app_bar.json
+++ b/snippet/fpc_app_bar.json
@@ -5,15 +5,10 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}AppBar extends StatelessWidget {",
-      "  const ${name}AppBar({",
-      "    super.key,",
-      "  });",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return const FPCAppBar();",
-      "  }",
+      "class ${name}AppBar extends FPCAppBar {",
+      "  const ${name}AppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
@@ -23,15 +18,23 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}BlurAppBar extends StatelessWidget {",
-      "  const ${name}BlurAppBar({",
-      "    super.key,",
-      "  });",
+      "class ${name}BlurAppBar extends FPCBlurAppBar {",
+      "  const ${name}BlurAppBar(",
+      "    super.context,",
+      "  );",
+      "}"
+    ]
+  },
+  "FPCBlurBlackAlwaysExpandedBottomSheetAppBar": {
+    "prefix": "fpcblurblackalwaysexpandedbottomsheetappbar",
+    "body": [
+      "import 'package:flutter_platform_component/flutter_platform_component.dart';",
+      "import 'package:flutter/widgets.dart';",
       "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return const FPCBlurAppBar();",
-      "  }",
+      "class ${name}BlurBlackAlwaysExpandedBottomSheetAppBar extends FPCBlurBlackAlwaysExpandedBottomSheetAppBar {",
+      "  const ${name}BlurBlackAlwaysExpandedBottomSheetAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
@@ -41,55 +44,23 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}BlurExpandedBottomSheetAppBar extends StatelessWidget {",
-      "  const ${name}BlurExpandedBottomSheetAppBar({",
-      "    super.key,",
-      "    required this.prefix,",
-      "    required this.cupertinoLocale,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final Widget? prefix;",
-      "  final String? cupertinoLocale;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCBlurExpandedBottomSheetAppBar(",
-      "      prefix: this.prefix,",
-      "      cupertinoLocale: this.cupertinoLocale,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}BlurExpandedBottomSheetAppBar extends FPCBlurExpandedBottomSheetAppBar {",
+      "  const ${name}BlurExpandedBottomSheetAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
-  "FPCBlurWhiteAlwaysExpandedBottomSheetAppBar": {
-    "prefix": "fpcblurwhitealwaysexpandedbottomsheetappbar",
+  "FPCBlurBlackAlwaysScreenAppBar": {
+    "prefix": "fpcblurblackalwaysscreenappbar",
     "body": [
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}BlurWhiteAlwaysExpandedBottomSheetAppBar extends StatelessWidget {",
-      "  const ${name}BlurWhiteAlwaysExpandedBottomSheetAppBar({",
-      "    super.key,",
-      "    required this.prefix,",
-      "    required this.cupertinoLocale,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final Widget? prefix;",
-      "  final String? cupertinoLocale;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCBlurWhiteAlwaysExpandedBottomSheetAppBar(",
-      "      prefix: this.prefix,",
-      "      cupertinoLocale: this.cupertinoLocale,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}BlurBlackAlwaysScreenAppBar extends FPCBlurBlackAlwaysScreenAppBar {",
+      "  const ${name}BlurBlackAlwaysScreenAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
@@ -99,55 +70,23 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}BlurScreenAppBar extends StatelessWidget {",
-      "  const ${name}BlurScreenAppBar({",
-      "    super.key,",
-      "    required this.context,",
-      "    required this.prefix,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final BuildContext context;",
-      "  final Widget? prefix;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCBlurScreenAppBar(",
-      "      context: this.context,",
-      "      prefix: this.prefix,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}BlurScreenAppBar extends FPCBlurScreenAppBar {",
+      "  const ${name}BlurScreenAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
-  "FPCBlurWhiteAlwaysScreenAppBar": {
-    "prefix": "fpcblurwhitealwaysscreenappbar",
+  "FPCBlackAlwaysExpandedBottomSheetAppBar": {
+    "prefix": "fpcblackalwaysexpandedbottomsheetappbar",
     "body": [
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}BlurWhiteAlwaysScreenAppBar extends StatelessWidget {",
-      "  const ${name}BlurWhiteAlwaysScreenAppBar({",
-      "    super.key,",
-      "    required this.context,",
-      "    required this.prefix,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final BuildContext context;",
-      "  final Widget? prefix;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCBlurWhiteAlwaysScreenAppBar(",
-      "      context: this.context,",
-      "      prefix: this.prefix,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}BlackAlwaysExpandedBottomSheetAppBar extends FPCBlackAlwaysExpandedBottomSheetAppBar {",
+      "  const ${name}BlackAlwaysExpandedBottomSheetAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
@@ -157,55 +96,23 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}ExpandedBottomSheetAppBar extends StatelessWidget {",
-      "  const ${name}ExpandedBottomSheetAppBar({",
-      "    super.key,",
-      "    required this.prefix,",
-      "    required this.cupertinoLocale,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final Widget? prefix;",
-      "  final String? cupertinoLocale;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCExpandedBottomSheetAppBar(",
-      "      prefix: this.prefix,",
-      "      cupertinoLocale: this.cupertinoLocale,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}ExpandedBottomSheetAppBar extends FPCExpandedBottomSheetAppBar {",
+      "  const ${name}ExpandedBottomSheetAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
-  "FPCWhiteAlwaysExpandedBottomSheetAppBar": {
-    "prefix": "fpcwhitealwaysexpandedbottomsheetappbar",
+  "FPCBlackAlwaysScreenAppBar": {
+    "prefix": "fpcblackalwaysscreenappbar",
     "body": [
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}WhiteAlwaysExpandedBottomSheetAppBar extends StatelessWidget {",
-      "  const ${name}WhiteAlwaysExpandedBottomSheetAppBar({",
-      "    super.key,",
-      "    required this.prefix,",
-      "    required this.cupertinoLocale,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final Widget? prefix;",
-      "  final String? cupertinoLocale;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCWhiteAlwaysExpandedBottomSheetAppBar(",
-      "      prefix: this.prefix,",
-      "      cupertinoLocale: this.cupertinoLocale,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}BlackAlwaysScreenAppBar extends FPCBlackAlwaysScreenAppBar {",
+      "  const ${name}BlackAlwaysScreenAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
@@ -215,80 +122,27 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}ScreenAppBar extends StatelessWidget {",
-      "  const ${name}ScreenAppBar({",
-      "    super.key,",
-      "    required this.context,",
-      "    required this.prefix,",
-      "    required this.onPressedBack,",
-      "  });",
-      "",
-      "  final BuildContext context;",
-      "  final Widget? prefix;",
-      "  final VoidCallback? onPressedBack;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCScreenAppBar(",
-      "      context: this.context,",
-      "      prefix: this.prefix,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
+      "class ${name}ScreenAppBar extends FPCScreenAppBar {",
+      "  const ${name}ScreenAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   },
-  "FPCWhiteAlwaysScreenAppBar": {
-    "prefix": "fpcwhitealwaysscreenappbar",
+  "class": {
+    "prefix": "class",
     "body": [
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}WhiteAlwaysScreenAppBar extends StatelessWidget {",
-      "  const ${name}WhiteAlwaysScreenAppBar({",
+      "class ${name}class extends StatelessWidget {",
+      "  const ${name}class({",
       "    super.key,",
-      "    required this.context,",
-      "    required this.prefix,",
-      "    required this.onPressedBack,",
       "  });",
-      "",
-      "  final BuildContext context;",
-      "  final Widget? prefix;",
-      "  final VoidCallback? onPressedBack;",
       "",
       "  @override",
       "  Widget build(BuildContext context) {",
-      "    return FPCWhiteAlwaysScreenAppBar(",
-      "      context: this.context,",
-      "      prefix: this.prefix,",
-      "      onPressedBack: this.onPressedBack,",
-      "    );",
-      "  }",
-      "}"
-    ]
-  },
-  "FPCPlatformAppBar": {
-    "prefix": "fpcplatformappbar",
-    "body": [
-      "import 'package:flutter_platform_component/flutter_platform_component.dart';",
-      "import 'package:flutter/widgets.dart';",
-      "",
-      "class ${name}PlatformAppBar extends StatelessWidget {",
-      "  const ${name}PlatformAppBar({",
-      "    super.key,",
-      "    required this.cupertino,",
-      "    required this.material,",
-      "  });",
-      "",
-      "  final Widget cupertino;",
-      "  final Widget material;",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return FPCPlatformAppBar(",
-      "      cupertino: this.cupertino,",
-      "      material: this.material,",
-      "    );",
+      "    return const class();",
       "  }",
       "}"
     ]
@@ -299,15 +153,10 @@
       "import 'package:flutter_platform_component/flutter_platform_component.dart';",
       "import 'package:flutter/widgets.dart';",
       "",
-      "class ${name}SliverAppBar extends StatelessWidget {",
-      "  const ${name}SliverAppBar({",
-      "    super.key,",
-      "  });",
-      "",
-      "  @override",
-      "  Widget build(BuildContext context) {",
-      "    return const FPCSliverAppBar();",
-      "  }",
+      "class ${name}SliverAppBar extends FPCSliverAppBar {",
+      "  const ${name}SliverAppBar(",
+      "    super.context,",
+      "  );",
       "}"
     ]
   }
